<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_recipes">

    <fragment
        android:id="@+id/navigation_all_recipes"
        android:name="com.uldisj.recipeapp.view.fragments.AllRecipesFragment"
        android:label="@string/title_all_recipes"
        tools:layout="@layout/fragment_all_recipes">
        <action
            android:id="@+id/action_all_recipes_to_recipe_details"
            app:destination="@id/navigation_recipe_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourite_recipes"
        android:name="com.uldisj.recipeapp.view.fragments.FavouriteRecipesFragment"
        android:label="@string/title_favourite_recipes"
        tools:layout="@layout/fragment_favourite_recipes" >
        <action
            android:id="@+id/action_favourite_recipes_to_recipe_details"
            app:destination="@id/navigation_recipe_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_random_recipe"
        android:name="com.uldisj.recipeapp.view.fragments.RandomRecipeFragment"
        android:label="@string/title_random_recipe"
        tools:layout="@layout/fragment_random_recipe" />

    <fragment
        android:id="@+id/navigation_recipe_details"
        android:name="com.uldisj.recipeapp.view.fragments.RecipeDetailsFragment"
        android:label="@string/title_recipe_details"
        tools:layout="@layout/fragment_recipe_details">

        <argument
            android:name="recipeDetails"
            app:argType="com.uldisj.recipeapp.model.entities.Recipe" />
    </fragment>
</navigation>